// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextRecommandation Tests should match the snapshot when the recommendation is active 1`] = `
<div
  className="pt-2 pl-3"
>
  <Checkbox
    checked={true}
    className={null}
    disabled={false}
    id={null}
    inputId="activeRecCheck"
    label="Test"
    name={null}
    onChange={[Function]}
    onContextMenu={null}
    onMouseDown={null}
    readOnly={false}
    style={null}
    value={null}
  />
  <label
    className="mt-1"
    htmlFor="activeRecCheck"
  >
    Test
  </label>
  <div
    className="col-12 col-md-9 mb-2 ml-3"
  >
    <InputText
      className="form-control"
      id="textRec"
      keyfilter={null}
      onChange={[Function]}
      onInput={null}
      onKeyPress={null}
      placeholder="recommendations.tiltAsNeeded.en"
      type="text"
      validateOnly={false}
      value=""
    />
  </div>
  <Tooltip
    appendTo="body"
    escape={true}
    for="#textRecInfoundefined"
    hideDelay={null}
    onBeforeShow={null}
    positionStyle={null}
    showDelay={null}
    title={null}
    tooltipDisabled={false}
    tooltipEvent="hover"
    tooltipPosition="right"
    tooltipStyleClass={null}
  />
</div>
`;

exports[`TextRecommandation Tests should match the snapshot when the recommendation is inactive 1`] = `
<div
  className="pt-2 pl-3"
>
  <Checkbox
    checked={false}
    className={null}
    disabled={false}
    id={null}
    inputId="activeRecCheck"
    label="Test"
    name={null}
    onChange={[Function]}
    onContextMenu={null}
    onMouseDown={null}
    readOnly={false}
    style={null}
    value={null}
  />
  <label
    className="mt-1"
    htmlFor="activeRecCheck"
  >
    Test
  </label>
  <Tooltip
    appendTo="body"
    escape={true}
    for="#textRecInfoundefined"
    hideDelay={null}
    onBeforeShow={null}
    positionStyle={null}
    showDelay={null}
    title={null}
    tooltipDisabled={false}
    tooltipEvent="hover"
    tooltipPosition="right"
    tooltipStyleClass={null}
  />
</div>
`;
